js/js.translator/testData/incremental/invalidation/suspendFunctionStopsSuspending/lib1/l1.0.kt
import kotlin.coroutines.resume
import kotlin.coroutines.suspendCoroutine

suspend fun foo(): Int = suspendCoroutine { continuation ->
    continuation.resume(41)
}
